[GTK][WPE] Crashing/weird behaviour when trying to use videos as textures with ANGLE WebGL enabled https://bugs.webkit.org/show_bug.cgi?id=236587

Reviewed by Kenneth Russell.

Disable the texture-sharing fast-path for GStreamer GL when ANGLE is
also enabled.

No new tests, no change in behaviour.

* platform/graphics/texmap/GraphicsContextGLTextureMapper.cpp:
(WebCore::GraphicsContextGLTextureMapper::copyTextureFromMedia):



Canonical link: https://commits.webkit.org/247322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289884 268f45cc-cd09-0410-ab3c-d52691b4dbfc